--- a/pie.html
+++ b/pie.html
@@ -10,110 +10,40 @@
     <title>Simple Pie</title>
 
     <link href="style.css" rel="stylesheet" />
+    <script
+      type="text/javascript"
+      src="https://www.gstatic.com/charts/loader.js"
+    ></script>
+    <script type="text/javascript">
+      google.charts.load('current', { packages: ['corechart'] })
+      google.charts.setOnLoadCallback(drawChart)
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Task', 'Hours per Day'],
+          ['Work', 11],
+          ['Eat', 20],
+          ['Commute', 20],
+          ['Watch TV', 20],
+          ['Sleep', 70],
+        ])
 
-    <style>
-      #chart {
-        max-width: 480px;
-        margin: 35px auto;
-        padding: 0;
-      }
-      .actions {
-        top: -10px;
-        position: relative;
-        z-index: 10;
-        max-width: 400px;
-        margin: 0 auto;
-      }
-      button {
-        color: #fff;
-        background: #20b2aa;
-        padding: 5px 10px;
-        margin: 2px;
-        font-weight: bold;
-        font-size: 13px;
-        border-radius: 5px;
-      }
-      p {
-        margin: 10px 0;
-      }
-      @media only screen and (max-width: 480px) {
-        .actions {
-          margin-top: 0;
-          left: 0;
+        var options = {
+          title: 'My Daily Activities',
+          pieHole: 0.4,
+          pieSliceText: 'label',
+          legend: 'none',
+          colors: ['red', '#004411', '#639', '#536', 'tomato'],
         }
-      }
-    </style>
 
-    <script>
-      window.Promise ||
-        document.write(
-          '<script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"><\/script>'
+        var chart = new google.visualization.PieChart(
+          document.getElementById('doughnut')
         )
-      window.Promise ||
-        document.write(
-          '<script src="https://cdn.jsdelivr.net/npm/eligrey-classlist-js-polyfill@1.2.20171210/classList.min.js"><\/script>'
-        )
-      window.Promise ||
-        document.write(
-          '<script src="https://cdn.jsdelivr.net/npm/findindex_polyfill_mdn"><\/script>'
-        )
-    </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-
-    <script>
-      // Replace Math.random() with a pseudo-random number generator to get reproducible results in e2e tests
-      // Based on https://gist.github.com/blixt/f17b47c62508be59987b
-      var _seed = 42
-      Math.random = function () {
-        _seed = (_seed * 16807) % 2147483647
-        return (_seed - 1) / 2147483646
+        chart.draw(data, options)
       }
     </script>
   </head>
 
   <body>
-    <div>
-      <div class="chart-wrap">
-        <div id="chart"></div>
-      </div>
-    </div>
-
-    <script>
-      var options = {
-        series: [44, 55, 13, 33],
-        chart: {
-          width: 380,
-          type: 'donut',
-        },
-        dataLabels: {
-          enabled: false,
-        },
-        responsive: [
-          {
-            breakpoint: 480,
-            options: {
-              chart: {
-                width: 200,
-              },
-              legend: {
-                show: false,
-              },
-            },
-          },
-        ],
-        legend: {
-          position: 'right',
-          offsetY: 0,
-          height: 230,
-        },
-      }
-
-      var chart = new ApexCharts(
-        document.querySelector('#chart'),
-        options
-      )
-      chart.render()
-    </script>
+    <div id="doughnut" style="width: 900px; height: 500px"></div>
   </body>
 </html>
