--- a/pie.html
+++ b/pie.html
@@ -34,7 +34,7 @@
           pieSliceText: 'label',
           legend: 'none',
           colors: ['#f1e05a', '#2b7489', '#563d7c', '#e34c26'],
-          backgroundColor: 'transparent',
+          backgroundColor: { fill: 'transparent' },
           chartArea: {
             left: 0,
             top: 30,
@@ -45,6 +45,7 @@
             color: 'black',
             fontSize: 25,
           },
+          pieSliceBorderColor: 'transparent',
           // slices: {
           //   0: {
           //     color: 'black',
