--- a/pie.html
+++ b/pie.html
@@ -46,20 +46,20 @@
             fontSize: 25,
           },
           pieSliceBorderColor: 'transparent',
-          // slices: {
-          //   0: {
-          //     color: 'black',
-          //     textStyle: {
-          //       color: 'red',
-          //       fontSize: 25,
-          //       // bold: true,
-          //       italic: true,
-          //     },
-          //   },
-          //   1: { color: 'red' },
-          //   2: { color: 'red' },
-          //   3: { color: 'red' },
-          // },
+          slices: {
+            0: {
+              color: 'black',
+              textStyle: {
+                color: 'red',
+                fontSize: 25,
+                // bold: true,
+                italic: true,
+              },
+            },
+            1: { color: 'red' },
+            2: { color: 'red' },
+            3: { color: 'red' },
+          },
         }
 
         var chart = new google.visualization.PieChart(
