--- a/heatmap.html
+++ b/heatmap.html
@@ -10,7 +10,152 @@
     <title>Simple HeatMap</title>
 
     <link href="style.css" rel="stylesheet" />
-
+    <style>
+      /* http://meyerweb.com/eric/tools/css/reset/
+  v2.0 | 20110126
+  License: none (public domain)
+*/
+      html,
+      body,
+      div,
+      span,
+      applet,
+      object,
+      iframe,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      p,
+      blockquote,
+      pre,
+      a,
+      abbr,
+      acronym,
+      address,
+      big,
+      cite,
+      code,
+      del,
+      dfn,
+      em,
+      img,
+      ins,
+      kbd,
+      q,
+      s,
+      samp,
+      small,
+      strike,
+      strong,
+      sub,
+      sup,
+      tt,
+      var,
+      b,
+      u,
+      i,
+      center,
+      dl,
+      dt,
+      dd,
+      ol,
+      ul,
+      li,
+      fieldset,
+      form,
+      label,
+      legend,
+      table,
+      caption,
+      tbody,
+      tfoot,
+      thead,
+      tr,
+      th,
+      td,
+      article,
+      aside,
+      canvas,
+      details,
+      embed,
+      figure,
+      figcaption,
+      footer,
+      header,
+      hgroup,
+      menu,
+      nav,
+      output,
+      ruby,
+      section,
+      summary,
+      time,
+      mark,
+      audio,
+      video {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        font-size: 100%;
+        font: inherit;
+        vertical-align: baseline;
+      }
+      /* HTML5 display-role reset for older browsers */
+      article,
+      aside,
+      details,
+      figcaption,
+      figure,
+      footer,
+      header,
+      hgroup,
+      menu,
+      nav,
+      section {
+        display: block;
+      }
+      body {
+        line-height: 1;
+      }
+      ol,
+      ul {
+        list-style: none;
+      }
+      blockquote,
+      q {
+        quotes: none;
+      }
+      blockquote:before,
+      blockquote:after,
+      q:before,
+      q:after {
+        content: '';
+        content: none;
+      }
+      table {
+        border-collapse: collapse;
+        border-spacing: 0;
+      }
+      * {
+        box-sizing: border-box;
+      }
+      body {
+        overflow: hidden;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: transparent;
+      }
+      html {
+        background: transparent;
+      }
+    </style>
     <script
       type="text/javascript"
       src="https://www.gstatic.com/charts/loader.js"
@@ -29,15 +174,6 @@
           [new Date(2012, 3, 15), 38024],
           [new Date(2012, 3, 16), 38108],
           [new Date(2012, 3, 17), 38229],
-          // Many rows omitted for brevity.
-          [new Date(2013, 9, 4), 38177],
-          [new Date(2013, 9, 5), 38705],
-          [new Date(2013, 9, 12), 38210],
-          [new Date(2013, 9, 13), 38029],
-          [new Date(2013, 9, 19), 38823],
-          [new Date(2013, 9, 23), 38345],
-          [new Date(2013, 9, 24), 38436],
-          [new Date(2013, 9, 30), 38447],
         ])
 
         var chart = new google.visualization.Calendar(
@@ -45,7 +181,7 @@
         )
 
         var options = {
-          title: 'Red Sox Attendance',
+          title: 'GitHub Contributions',
           height: '100%',
           calendar: { cellSize: 20 },
           noDataPattern: {
@@ -60,6 +196,6 @@
   </head>
 
   <body>
-    <div id="heatmap" style="width: 100%; height: 100%"></div>
+    <div id="heatmap" style="width: 1150px; height: 350px" />
   </body>
 </html>
