--- a/heatmap.html
+++ b/heatmap.html
@@ -143,9 +143,11 @@
         box-sizing: border-box;
       }
       /* end reset */
-      @import url('https://fonts.googleapis.com/css?family=Lato:300,400,600,700');
+
+      @import url('https://fonts.googleapis.com/css?family=Space+Mono:300,400,600,700');
+
       body {
-        font-family: Lato;
+        font-family: Space Mono;
         overflow: hidden;
         position: absolute;
         width: 100%;
@@ -153,7 +155,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: transparent;
+        background: '#1A202C';
       }
       html {
         background: transparent;
@@ -190,27 +192,32 @@
           calendar: {
             cellSize: 20,
             monthLabel: {
-              fontFamily: 'Lato',
+              fontFamily: 'Space Mono',
               fontSize: 12,
               bold: true,
             },
+            cellColor: {
+              stroke: '#fafafa',
+              strokeOpacity: 0.5,
+              strokeWidth: 1,
+            },
             underYearSpace: 10, // Bottom padding for the year labels.
             yearLabel: {
-              fontName: 'Lato',
+              fontName: 'Space Mono',
               fontSize: 42,
               bold: true,
             },
             dayOfWeekLabel: {
-              fontName: 'Lato',
+              fontName: 'Comic Sans MS',
               fontSize: 12,
-              color: 'black',
+              color: 'white',
               bold: false,
               italic: false,
             },
             dayOfWeekRightSpace: 10,
             daysOfWeek: 'SMTWTFS',
             monthOutlineColor: {
-              stroke: 'rebeccapurple',
+              stroke: '#663399',
               strokeOpacity: 0.8,
               strokeWidth: 2,
             },
