--- a/heatmap.html
+++ b/heatmap.html
@@ -155,7 +155,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: '#1A202C';
+        background: transparent;
       }
       html {
         background: transparent;
@@ -223,7 +223,7 @@
             },
           },
           noDataPattern: {
-            backgroundColor: '',
+            backgroundColor: '#1A202C',
             color: '',
           },
         }
