--- a/heatmap.html
+++ b/heatmap.html
@@ -198,7 +198,7 @@
             },
             cellColor: {
               stroke: '#fafafa',
-              strokeOpacity: 0.5,
+              strokeOpacity: 1,
               strokeWidth: 1,
             },
             underYearSpace: 10, // Bottom padding for the year labels.
@@ -208,7 +208,7 @@
               bold: true,
             },
             dayOfWeekLabel: {
-              fontName: 'Comic Sans MS',
+              fontName: 'Lato',
               fontSize: 12,
               color: 'white',
               bold: false,
@@ -223,7 +223,7 @@
             },
           },
           noDataPattern: {
-            backgroundColor: '#1A202C',
+            backgroundColor: '',
             color: '',
           },
         }
