set height on map

--- a/heatmap.html
+++ b/heatmap.html
@@ -234,6 +234,11 @@
   </head>
 
   <body>
-    <div id="heatmap" style="width: 1150px; height: 350px" />
+    <div style="background-color: red">
+      <div
+        id="heatmap"
+        style="width: 1150px; height: 210px; background-color: blue"
+      />
+    </div>
   </body>
 </html>
