conditionally set viewport size

--- a/heatmap.html
+++ b/heatmap.html
@@ -235,10 +235,7 @@
 
   <body>
     <div style="background-color: red">
-      <div
-        id="heatmap"
-        style="width: 1150px; height: 210px; background-color: blue"
-      />
+      <div id="heatmap" style="width: 1150px; height: 210px" />
     </div>
   </body>
 </html>
