remove chart title

--- a/heatmap.html
+++ b/heatmap.html
@@ -186,7 +186,7 @@
         )
 
         var options = {
-          title: 'GitHub Contributions',
+          title: '',
           height: '100%',
           with: '100%',
           calendar: {
